test/method/already_defined.st
Object subclass: #Foobar variables: #().

!Foobar hello
	Transcript show: 'Hello'!.

!Foobar hello
	Transcript show: 'Goodbye'!.
